<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#F8F8FA"
  tools:context=".MainActivity">

  <androidx.cardview.widget.CardView
    android:id="@+id/totalBillContainerView"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="24dp"
    android:layout_marginStart="24dp"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="10dp"
    app:cardElevation="@dimen/cardview_compat_inset_shadow"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.32999998">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <TextView
        android:id="@+id/totalBillLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_bill_amount"
        android:textStyle="bold"
        android:textColor="#6B6E70"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/totalBillValueTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <TextView
        android:id="@+id/totalBillValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_amount"
        android:textColor="#101010"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toEndOf="@id/totalBillLabelTextView"
        app:layout_constraintStart_toStartOf="@id/totalBillLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/totalBillLabelTextView" />

      <TextView
        android:id="@+id/billAmountLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/bill_amount"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tipAmountLabelTextView"
        app:layout_constraintStart_toStartOf="parent" />

      <TextView
        android:id="@+id/billAmountValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_amount"
        android:textColor="#F6C32A"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/billAmountLabelTextView"
        app:layout_constraintStart_toStartOf="@id/billAmountLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/billAmountLabelTextView" />

      <TextView
        android:id="@+id/tipAmountLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:text="@string/tip_amount"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/tipAmountValueTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

      <TextView
        android:id="@+id/tipAmountValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_amount"
        android:textColor="#EA9D97"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tipAmountLabelTextView"
        app:layout_constraintStart_toStartOf="@id/tipAmountLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/tipAmountLabelTextView" />

      <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@id/tipAmountLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/totalBillValueTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.cardview.widget.CardView>

  <TextView
    android:id="@+id/billAmountInputLabelTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:text="@string/enter_bill_amount"
    app:layout_constraintStart_toStartOf="@+id/billAmountInputValueEditTextView"
    app:layout_constraintTop_toBottomOf="@+id/totalBillContainerView" />

  <EditText
    android:id="@+id/billAmountInputValueEditTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:ems="10"
    android:maxLength="7"
    android:hint="@string/currency_dollar_symbol"
    android:inputType="numberDecimal"
    android:textSize="20sp"
    app:layout_constraintStart_toStartOf="@id/tipPercentageLabelTextView"
    app:layout_constraintTop_toBottomOf="@+id/billAmountInputLabelTextView" />

  <TextView
    android:id="@+id/tipPercentageLabelTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:text="@string/choose_your_tip_percentage"
    app:layout_constraintStart_toStartOf="@+id/minusButtonView"
    app:layout_constraintTop_toBottomOf="@+id/billAmountInputValueEditTextView" />

  <Button
    android:id="@+id/minusButtonView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:backgroundTint="#E6867F"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:minHeight="48dp"
    android:minWidth="48dp"
    android:text="@string/button_minus"
    android:textSize="20sp"
    app:layout_constraintBottom_toBottomOf="@+id/tipPercentageValueTextView"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/tipPercentageValueTextView" />

  <TextView
    android:id="@+id/tipPercentageValueTextView"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="#FFFFFF"
    android:gravity="center"
    android:text="@string/default_tip_percentage"
    android:textColor="#000000"
    android:textSize="25sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toStartOf="@+id/plusButtonView"
    app:layout_constraintStart_toEndOf="@+id/minusButtonView"
    app:layout_constraintTop_toBottomOf="@+id/tipPercentageLabelTextView" />

  <Button
    android:id="@+id/plusButtonView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="200dp"
    android:backgroundTint="#E6867F"
    android:minHeight="48dp"
    android:minWidth="48dp"
    android:text="@string/button_plus"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:textSize="20sp"
    app:layout_constraintBottom_toBottomOf="@+id/tipPercentageValueTextView"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@+id/tipPercentageValueTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>